[gd_scene load_steps=10 format=3 uid="uid://ddc5gpxod2j4"]

[ext_resource type="Script" path="res://main_game/World.gd" id="1_7axet"]
[ext_resource type="PackedScene" uid="uid://c8hx5t3o022ng" path="res://road_generator.tscn" id="2_yho0j"]
[ext_resource type="Script" path="res://main_game/Control.gd" id="4_d8ave"]
[ext_resource type="FontFile" uid="uid://fjgdn06ebj4c" path="res://CarLock-lawX.ttf" id="5_harwm"]
[ext_resource type="PackedScene" uid="uid://djxwuwtpo3teh" path="res://main_game/car_move.tscn" id="5_uy6u3"]
[ext_resource type="Script" path="res://main_game/HeartPy.gd" id="6_8v0n0"]

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_yulgn"]

[sub_resource type="Sky" id="Sky_wr544"]
sky_material = SubResource("PhysicalSkyMaterial_yulgn")

[sub_resource type="Environment" id="Environment_sjway"]
background_mode = 2
background_energy_multiplier = 2.09
sky = SubResource("Sky_wr544")
ambient_light_source = 3
ambient_light_color = Color(0.423529, 0.698039, 0.941176, 1)

[node name="MainGame" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.473111, 0.907378, -0.306388)
script = ExtResource("1_7axet")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_sjway")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.422618, 0.906308, 0, -0.906308, 0.422618, 0.518971, 330.308, 0)

[node name="road_generator" parent="." instance=ExtResource("2_yho0j")]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 0)

[node name="Car" parent="." instance=ExtResource("5_uy6u3")]
transform = Transform3D(0.999999, 0, 0, 0, 1, 0, 0, 0, 1, 4, 148.319, -4)
inertia = Vector3(363.64, 261.36, 420.45)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("4_d8ave")

[node name="Distance" type="Label" parent="Control"]
layout_mode = 2
offset_left = 318.0
offset_top = 15.0
offset_right = 555.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(1, 0.647059, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Distance
"

[node name="DistanceValue" type="Label" parent="Control/Distance"]
layout_mode = 0
offset_left = 162.0
offset_top = 7.0
offset_right = 313.0
offset_bottom = 35.0
theme_override_fonts/font = ExtResource("5_harwm")
theme_override_font_sizes/font_size = 25

[node name="Speed" type="Label" parent="Control"]
layout_mode = 2
offset_left = 36.0
offset_top = 15.0
offset_right = 273.0
offset_bottom = 60.0
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 0.647059, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Speed"

[node name="SpeedValue" type="Label" parent="Control/Speed"]
layout_mode = 0
offset_left = 108.0
offset_top = 6.0
offset_right = 352.0
offset_bottom = 42.0
theme_override_fonts/font = ExtResource("5_harwm")
theme_override_font_sizes/font_size = 25

[node name="Timer" type="Timer" parent="Control"]

[node name="Button" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 1044.0
offset_top = 3.0
offset_right = 1108.0
offset_bottom = 67.0
action_mode = 0
button_mask = 0

[node name="HeartPy" type="Node" parent="."]
script = ExtResource("6_8v0n0")

[node name="Heart" type="Label" parent="HeartPy"]
offset_left = 638.0
offset_top = 18.0
offset_right = 817.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(1, 0.647059, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Heart Rate
"

[node name="HeartValue" type="Label" parent="HeartPy/Heart"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.562
anchor_top = 0.633
anchor_right = 1.562
anchor_bottom = 1.0
offset_left = -78.598
offset_top = -22.485
offset_right = 163.402
offset_bottom = 6.0
theme_override_fonts/font = ExtResource("5_harwm")
theme_override_font_sizes/font_size = 25

[node name="Timer" type="Timer" parent="HeartPy"]

[connection signal="speed_changed" from="Control" to="road_generator" method="_on_control_speed_changed"]
